Fixed issues #799 (confetti on finish click of tour) and issue #804 (background card icon). For issue 804, i adjusted the background since we want to keep the icon in from of the carousel when it is sliding in. Now the background is not visible on the website.

--- a/themes/tilburg/assets/scss/_main.scss
+++ b/themes/tilburg/assets/scss/_main.scss
@@ -1475,3 +1475,75 @@ form {
     display: none !important;
   }
 }
+
+/* Conffeti Button */
+@keyframes topBubbles {
+	0% {
+		background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+	}
+	50% {
+		background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+	}
+	100% {
+		background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+		background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+	}
+}
+@keyframes bottomBubbles {
+	0% {
+		background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+	}
+	50% {
+		background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+	}
+	100% {
+		background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+		background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+	}
+}
+.confetti-button {
+	&:before {
+		position: absolute;
+		content: '';
+		display: block;
+		width: 140%;
+		height: 100%;
+		left: -20%;
+		z-index: -1000;
+		transition: all ease-in-out 0.5s;
+		background-repeat: no-repeat;
+		display: none;
+		top: -75%;
+		background-image: radial-gradient(circle, #c2a65a 20%, transparent 20%), radial-gradient(circle, transparent 20%, #2cb34a 20%, transparent 30%), radial-gradient(circle, #2c47b3 20%, transparent 20%), radial-gradient(circle, #a32cb3 20%, transparent 20%), radial-gradient(circle, transparent 10%, #c25a5a 15%, transparent 20%), radial-gradient(circle, #6dc25a 20%, transparent 20%), radial-gradient(circle, #cf89d9 20%, transparent 20%), radial-gradient(circle, #bee461 20%, transparent 20%), radial-gradient(circle, #bee461 20%, transparent 20%);
+		background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
+	}
+	&:after {
+		position: absolute;
+		content: '';
+		display: block;
+		width: 140%;
+		height: 100%;
+		left: -20%;
+		z-index: -1000;
+		transition: all ease-in-out 0.5s;
+		background-repeat: no-repeat;
+		display: none;
+		bottom: -75%;
+		background-image: radial-gradient(circle, #2cb34a 20%, transparent 20%), radial-gradient(circle, #61a5e4 20%, transparent 20%), radial-gradient(circle, transparent 10%, #db61e4 15%, transparent 20%), radial-gradient(circle, #e2e532 20%, transparent 20%), radial-gradient(circle, #7115da 20%, transparent 20%), radial-gradient(circle, #b39a2c 20%, transparent 20%), radial-gradient(circle, #2cb34a 20%, transparent 20%);
+		background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+	}
+	&:active {
+		transform: scale(0.9);
+		background-color: #5a9cc2;
+	}
+}
+.confetti-button.animate {
+	&:before {
+		display: block;
+		animation: topBubbles ease-in-out 0.75s forwards;
+	}
+	&:after {
+		display: block;
+		animation: bottomBubbles ease-in-out 0.75s forwards;
+	}
+}
